Article list UI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,24 +4,27 @@ jobs:
   run-rspec-and-linters:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 3.0.0
-        bundler-cache: true
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0.0
+          bundler-cache: true
 
-    - name: Setup Yarn
-      run: yarn install --check-files
+      - name: Setup Yarn
+        run: yarn install --check-files
 
-    - name: Run Rubocop
-      run: bundle exec rubocop
+      - name: Run Rubocop
+        run: bundle exec rubocop
 
-    - name: Run Rspec
-      run: bundle exec rspec
+      - name: Run Rspec
+        run: bundle exec rspec
 
-    - name: Run Brakeman
-      run: bundle exec brakeman
+      - name: Run Brakeman
+        run: bundle exec brakeman
 
-    - name: Run Bundle Audit
-      run: bundle exec bundle audit
+      - name: Run Bundle Audit
+        run: bundle exec bundle audit
+
+      - name: Run Eslint
+        run: yarn lint
